// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordeon /> with an ID matches with snapshot 1`] = `
<div
  className="sc-bczRLJ bNmegB k-Accordeon k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="custom_id-custom_id-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="custom_id-custom_id-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="custom_id-custom_id-0_header"
      className="k-Accordeon__content"
      id="custom_id-custom_id-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="custom_id-custom_id-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="custom_id-custom_id-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="custom_id-custom_id-1_header"
      className="k-Accordeon__content"
      id="custom_id-custom_id-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with custom classNames matches with snapshot 1`] = `
<div
  className="sc-bczRLJ bNmegB k-Accordeon custom1 k-Accordeon--isAnimated"
  data-test={true}
>
  <div
    className="k-Accordeon__item custom2"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header custom3"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content custom4"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
    data-test={true}
  >
    <button
      aria-controls="accordeon-accordeon-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      data-test={true}
      id="accordeon-accordeon-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-1_header"
      className="k-Accordeon__content"
      data-test={true}
      id="accordeon-accordeon-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with isAnimated prop set to \`false\` matches with snapshot 1`] = `
<div
  className="sc-bczRLJ bNmegB k-Accordeon"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-1_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with one item matches with snapshot 1`] = `
<div
  className="sc-bczRLJ bNmegB k-Accordeon k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with two items matches with snapshot 1`] = `
<div
  className="sc-bczRLJ bNmegB k-Accordeon k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="var(--color-grey-900, #222)"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-1_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;
